syntax = "proto3";

package statman;
option go_package = "csproto";

message PlayerData {
    string name = 1;
    uint64 steamID = 2;
    int32 team = 3;
    float adr = 4;
    int32 kills = 5;
    int32 deaths = 6;
}

message Kill {
    uint64 killerID = 1;
    uint64 victimID = 2;
}

message RoundData {
    int32 winningTeam = 1;
    repeated Kill kills = 2;
}

message MatchData {
    string map = 1;
    int32 roundCount = 2;
}

message MatchInfo {
    MatchData matchData = 1;
    repeated RoundData roundData = 2;
    repeated PlayerData playerData = 3;
}

message SaveMatchRequest {
    MatchInfo matchInfo = 1;
}

message SaveMatchResponse {

}

service Statman {
    rpc SaveMatch(SaveMatchRequest) returns(SaveMatchResponse){};
}
